--- a/pilipenko/sass/main.sass
+++ b/pilipenko/sass/main.sass
@@ -49,12 +49,6 @@ hr
 	width: 75px
 	margin-bottom: 26px
 	margin-top: 16px
-.gradient
-	background: linear-gradient(rgba(0,0,0,1) ,rgba(0,0,0,0.4) ))
-	position: absolute
-	width: 100%
-	z-index: 11
-	top: 0
 .menu-header
 	position: fixed
 	height: 62px
@@ -68,13 +62,15 @@ hr
 			padding-right: 15px
 
 		a
+			display: block
+			height: 46px
 			color: #000
 			text-transform: uppercase
 			margin-right: 15px
 			text-decoration: none
 			&:hover
 				border-bottom: 3px solid #1C808E
-.scrolldown
+	.scrolldown
 		position: absolute
 		top: 88vh
 		left: 48%
@@ -108,7 +104,6 @@ hr
 				position: relative
 				margin-bottom: 11px
 			.item-descr 
-
 				position: absolute
 				bottom: 25px
 				text-align: left
@@ -130,7 +125,8 @@ hr
 		margin-bottom: 21px
 	.carusel 
 		.iframes img
-			border-bottom: 1px solid #B5B5B5
+			width: 100%
+			border: 1px solid #B5B5B5
 		h1
 			font-size: 25px
 		p 
@@ -143,8 +139,13 @@ hr
 			i 
 				color: #1F8C79
 		.item img
-			margin-bottom: 10px
+			margin-bottom: 40px
 			padding-left: 117px
+	.right-col
+	img
+		display: inline-block
+		margin-bottom: 25px
+
 
 .fonts
 	height: 382px
@@ -161,10 +162,9 @@ hr
 		margin-top: 15px
 		margin-bottom: 115px
 	.e-mail
-		
 		margin-top: 66px
 		input[type="text"] 
-			margin-right: 12.98px
+			margin-right: 12.88px
 			background-color: #236B5D
 			display: inline-block
 			border: 2px solid #fff
@@ -183,15 +183,16 @@ hr
 			transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s
 		a 
 			text-align: center
-			padding: 13px 0px
+			padding: 16.5px 0px
 			margin: 0
 			display: inline-block
-			top: 66px
-			width: 164px
+			width: 132.5px
 			height: 55px
+		.btn_2
+			background-color: rgba(250, 250, 250, 0.58)
+			border: 1px solid #fff 
 	.soc-btn
 		text-align: center
-		
 		display: inline
 		margin-top: 30px
 		a 
@@ -203,6 +204,7 @@ hr
 			height: 30px
 			transition: .5s
 			display: inline-block
+
 			
 						
 .scrollup 
