--- a/pilipenko/sass/main.sass
+++ b/pilipenko/sass/main.sass
@@ -49,12 +49,16 @@ hr
 	width: 75px
 	margin-bottom: 26px
 	margin-top: 16px
+.top-header
+	max-height: 340px
 .menu-header
+	display: inline-block
 	position: fixed
 	height: 62px
 	width: 100%
 	background-color: rgba(365, 365, 365, 0.8)
 	.otstup_mnu 
+		
 		float: right
 		li 
 			height: 100%
@@ -70,20 +74,20 @@ hr
 			text-decoration: none
 			&:hover
 				border-bottom: 3px solid #1C808E
-	.scrolldown
-		position: absolute
-		top: 88vh
-		left: 48%
-		i 
-			text-align: center
-			color: #fff
-			font-size: 30px
-			border: 2px solid #fff
-			padding: 18px
-			width: 65px
-			height: 65px
-			border-radius: 50%
-			margin-bottom: 10px
+.scrolldown
+	position: absolute
+	top: 88vh
+	left: 48%
+	i 
+		text-align: center
+		color: #fff
+		font-size: 30px
+		border: 2px solid #fff
+		padding: 18px
+		width: 65px
+		height: 65px
+		border-radius: 50%
+		margin-bottom: 10px
 #home
 	.header-img
 		height: 100vh
@@ -148,7 +152,7 @@ hr
 
 
 .fonts
-	height: 382px
+	height: 445px
 	background-color: #236B5D
 	.phone
 		font-family: 'Montserrat', serif
