error for div-analitick

--- a/pilipenko/sass/media.sass
+++ b/pilipenko/sass/media.sass
@@ -26,12 +26,11 @@
 
 	/* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-
+	.otstup-right
+		margin-right: 20px
 
 	/* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-
-
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
