--- a/pilipenko/css/media.css
+++ b/pilipenko/css/media.css
@@ -15,6 +15,9 @@
 
   /* Small Devices, Tablets */ }
 @media only screen and (max-width: 768px) {
+  .otstup-right {
+    margin-right: 20px; }
+
   /* Extra Small Devices, Phones */ }
 /* Custom, iPhone Retina */
 
