--- a/pilipenko/sass/media.sass
+++ b/pilipenko/sass/media.sass
@@ -7,29 +7,31 @@
 
 /* Medium Devices, Desktops */
 @media screen and (max-width : 992px)
-	.col-center
-		text-align: center
-	
-
-
-	.navbar-head
-		.main_mnu_buttons 
-			float: right
-			padding: 10px 10px
-			border: 2px solid #fff		
-			.menu-header
-				display: none
-				.otstup_mnu li 
-					display: block 
+.col-center
+	text-align: center
+.navbar-head
+	.main_mnu_buttons 
+		float: right
+		padding: 10px 10px
+		border: 2px solid #fff		
+	.menu-header
+		display: none
+		.otstup_mnu li 
+			display: block 
 
 	
 
 	/* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
-	.otstup-right
-		margin-right: 20px
+@media screen and (max-width : 768px)
+.otstup-right
+	margin-right: 20px
+.fonts .phone
+	text-align: center
 
-	/* Extra Small Devices, Phones */
+
+
+
+		/* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 
 /* Custom, iPhone Retina */
