--- a/pilipenko/sass/main.sass
+++ b/pilipenko/sass/main.sass
@@ -58,7 +58,7 @@ hr
 	width: 100%
 	background-color: rgba(365, 365, 365, 0.8)
 	.otstup_mnu 
-		
+
 		float: right
 		li 
 			height: 100%
@@ -152,7 +152,7 @@ hr
 
 
 .fonts
-	height: 445px
+	height: auto
 	background-color: #236B5D
 	.phone
 		font-family: 'Montserrat', serif
