--- a/pilipenko/sass/media.sass
+++ b/pilipenko/sass/media.sass
@@ -1,38 +1,32 @@
-/* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px) 
-
-
-
-
-
 /* Medium Devices, Desktops */
 @media screen and (max-width : 992px)
-.col-center
-	text-align: center
-.navbar-head
+	.col-center
+		text-align: center
 	.main_mnu_buttons 
 		float: right
 		padding: 10px 10px
 		border: 2px solid #fff		
 	.menu-header
 		display: none
-		.otstup_mnu li 
-			display: block 
-
-	
-
+		.otstup_mnu
+			float: none
+			li
+				display: block 
 	/* Small Devices, Tablets */
 @media screen and (max-width : 768px)
-.otstup-right
-	margin-right: 20px
-.fonts .phone
-	text-align: center
-
-
+	.otstup-right
+		width: 100%
+		margin-right: 20px
+	.fonts.phone
+		text-align: center
+		margin: 0 auto
+	.e-mail
+		margin: 0
+		padding: 0
 
 
 		/* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px)
+@media only screen and (max-width : 500px)
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
