--- a/pilipenko/sass/media.sass
+++ b/pilipenko/sass/media.sass
@@ -3,15 +3,31 @@
 	.col-center
 		text-align: center
 	.main_mnu_buttons 
+		display: inline-block
+		cursor: pointer
+		border-radius: 6px 
+		opacity: 0.6
 		float: right
-		padding: 10px 10px
-		border: 2px solid #fff		
+		background-color: #fff
+		border: 1px solid #c9c1a1
+		i 
+			color: #000
+		&:hover
+			background-color: #fff 
+			opacity: 0.8
+
 	.menu-header
+		text-align: center
+		height: 100vh
 		display: none
 		.otstup_mnu
+			margin-top: 50%
 			float: none
 			li
 				display: block 
+				a 
+					display: inline-block
+					
 	/* Small Devices, Tablets */
 @media screen and (max-width : 768px)
 	.otstup-right
