--- a/pilipenko/css/media.css
+++ b/pilipenko/css/media.css
@@ -4,16 +4,30 @@
     text-align: center; }
 
   .main_mnu_buttons {
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 6px;
+    opacity: 0.6;
     float: right;
-    padding: 10px 10px;
-    border: 2px solid #fff; }
+    background-color: #fff;
+    border: 1px solid #c9c1a1; }
+    .main_mnu_buttons i {
+      color: #000; }
+    .main_mnu_buttons:hover {
+      background-color: #fff;
+      opacity: 0.8; }
 
   .menu-header {
+    text-align: center;
+    height: 100vh;
     display: none; }
     .menu-header .otstup_mnu {
+      margin-top: 50%;
       float: none; }
       .menu-header .otstup_mnu li {
         display: block; }
+        .menu-header .otstup_mnu li a {
+          display: inline-block; }
 
   /* Small Devices, Tablets */ }
 @media screen and (max-width: 768px) {
