--- a/pilipenko/css/media.css
+++ b/pilipenko/css/media.css
@@ -4,20 +4,23 @@
     text-align: center; }
 
   .main_mnu_buttons {
+    padding: 10px 15px;
+    position: fixed;
+    right: 0;
+    z-index: 11;
     display: inline-block;
     cursor: pointer;
     border-radius: 6px;
     opacity: 0.6;
     float: right;
-    background-color: #fff;
-    border: 1px solid #c9c1a1; }
+    background: none;
+    border: none;
+    font-size: 20px; }
     .main_mnu_buttons i {
-      color: #000; }
-    .main_mnu_buttons:hover {
-      background-color: #fff;
-      opacity: 0.8; }
+      color: #fff; }
 
   .menu-header {
+    z-index: 1;
     text-align: center;
     height: 100vh;
     display: none; }
