fized font size and team block

--- a/freelancer/src/sass/main.sass
+++ b/freelancer/src/sass/main.sass
@@ -26,7 +26,7 @@ div
 
 p
   font-size: 15px
-  text-align: justify
+  text-align: left
   width: 100%
   padding: 0
   margin-left: 0
@@ -36,7 +36,8 @@ p
   z-index: 0
   font-size: 19px
   color: #9aa0ab
-
+h1
+  font-size: 1.7em
 h2, h3
   font-family: "Roboto", sans-serif
   text-decoration: blink
@@ -185,11 +186,10 @@ i
 .titles_first 
   padding-top: 180px
   color: $font-darkblue
-  font-size: 20px
   text-transform: uppercase
   p
     color: $font-dark
-    font-size: 21px
+    font-size: 19px
     font-weight: 400
 
 .button 
