--- a/freelancer/src/sass/main.sass
+++ b/freelancer/src/sass/main.sass
@@ -1,5 +1,6 @@
 @import 'colors'
-
+body
+  owerflow-x: hidden
 *::-moz-placeholder, *:-ms-input-placeholder , *:-moz-placeholder  , *::-webkit-input-placeholder  
   color: #666
   opacity: 1
