--- a/freelancer/src/sass/main.sass
+++ b/freelancer/src/sass/main.sass
@@ -1,6 +1,6 @@
 @import 'colors'
 body
-  owerflow-x: hidden
+  owerflow-x: hidden !important
 *::-moz-placeholder, *:-ms-input-placeholder , *:-moz-placeholder  , *::-webkit-input-placeholder  
   color: #666
   opacity: 1
@@ -38,7 +38,7 @@ p
   font-size: 19px
   color: #9aa0ab
 h1
-  font-size: 1.9em
+  font-size: 1.95em
 h2, h3
   font-family: "Roboto", sans-serif
   text-decoration: blink
@@ -108,7 +108,7 @@ i
         transition: all.30s
 
 .main_mnu_button
-  width: 32px
+  width: 25px
   height: 25px
   position: fixed
   top: 25px
@@ -125,7 +125,7 @@ i
   span
     display: block
     position: absolute
-    height: 3px
+    height: 2px
     width: 100%
     background: #fff
     opacity: 1
@@ -145,13 +145,13 @@ i
       -o-transform-origin: left center
       transform-origin: left center
     &:nth-child(2) 
-      top: 11px;
+      top: 7px;
       -webkit-transform-origin: left center
       -moz-transform-origin: left center
       -o-transform-origin: left center
       transform-origin: left center
     &:nth-child(3) 
-      top: 21px
+      top: 15px
       -webkit-transform-origin: left center
       -moz-transform-origin: left center
       -o-transform-origin: left center
@@ -174,7 +174,7 @@ i
       -moz-transform: rotate(-45deg)
       -o-transform: rotate(-45deg)
       transform: rotate(-45deg)
-      top: 21px
+      top: 15px
       left: 8px
 
 .colored_mnu
