--- a/pilipenko/src/sass/main.sass
+++ b/pilipenko/src/sass/main.sass
@@ -230,4 +230,8 @@ hr
 		text-decoration: none
 		&:activ
 			transition: .2s
-
+.analytics-item
+	img
+		width: 100%
+.item-title, .item-text
+	display: none
