--- a/phone/css/main.css
+++ b/phone/css/main.css
@@ -72,6 +72,9 @@ p {
 a:hover{
 	text-decoration:none;
 }
+.single_gallery{
+	text-align:center;
+}
 ul{
 	margin:0;
 	padding:0;
@@ -365,6 +368,11 @@ p.description {
 .row {
 	margin-left: -15px;
 	margin-right: -15px;
+}
+iframe.embed-responsive-item {
+    width:  100%;
+    height: auto;
+    min-height: 300px;
 }
 .all-colum {
 	padding: 130px 0px 40px 0px;
